fix input overflow issue and move background color to container

--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -3,10 +3,15 @@ input {
   outline: none;
 }
 
+.container--contact {
+  background-color: #fff;
+  border-radius: 0.5rem;
+}
+
 .input--contact {
   padding-inline: 1rem;
   padding-block: 0.5rem;
-  border-radius: 0.5rem;
+  background-color: transparent;
 }
 
 .label--contact {
